examples/test/testpolicy11055.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11055
  namespace: namespace340
spec:
  podSelector:
    matchLabels:
      key34: value40
      key43: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value25
      podSelector:
        matchLabels:
          key30: value3
          key13: value8
